# aci

./: .env.example  .env.shared  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  CLA-Corporate.md  CLA-Individual.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.app  Dockerfile.runner  Dockerfile.server  INTEGRATION_GUIDE.md  README.md  SECURITY.md  alembic.ini  compose.ci.yml  compose.yml  db_init.sh  docker-compose.yml  env.example  integrations.md  mypy.ini  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  test_api_host_override.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend.yml  ci.yml  devportal.yml
.zed/: settings.json
aipolabs/alembic/: env.py
aipolabs/cli/: README.md  aipocli.py  aipolabs.py  config.py
aipolabs/common/: config.py  embeddings.py  encryption.py  enums.py  exceptions.py  filter.py  logging.py  openai_service.py  processor.py  schemas.py  utils.py  validator.py
aipolabs/server/: acl.py  config.py  custom_instructions.py  dependencies.py  dependency_check.py  main.py  oauth2.py  openai_service.py  quota_manager.py  schemas.py  security_credentials_manager.py  sentry.py  validations.py
alembic/: env.py
alembic/versions/: 2024_09_30_1833-71155c410fe8_initial_migration.py  2024_10_02_2235-0fbd5d70653e_add_profile_picture_column.py
app/: config.py  dependencies.py  logging.py  main.py  openai_service.py  schemas.py
app/alembic/: env.py
app/apps/: aipolabs_test.py  base.py
app/database/: crud.py  engine.py  models.py
app/db/: crud.py  engine.py
app/routes/: apps.py  auth.py  functions.py  projects.py
app/tests/: conftest.py  helper.py  test_auth_api.py
apps/: setup_new.sh
apps/accredible/: app.json
apps/active_campaign/: app.json  functions.json
apps/aero_workflow/: functions.json
apps/agentmail/: app.json  functions.json
apps/aidbase/: app.json
apps/aipolabs_secrets_manager/: app.json  functions.json
apps/aipolabs_test/: app.json  functions.json
apps/airtable/: app.json  functions.json
apps/all_images/: app.json  functions.json
apps/arxiv/: app.json
apps/asana/: app.json  functions.json
apps/baidu_map/: app.json  functions.json
apps/brave_search/: app.json  functions.json
apps/browserbase/: app.json  functions.json
apps/cal_com/: app.json  functions.json
apps/calendly/: app.json  functions.json
apps/clickup/: app.json  functions.json
apps/coda/: functions.json
apps/coinmarketcap/: app.json  functions.json
apps/dexscreener/: app.json  functions.json
apps/dify/: functions.json
apps/discord/: app.json  functions.json
apps/etherscan/: app.json  functions.json
apps/exa_ai/: app.json  functions.json
apps/example/: app.json  functions.json
apps/factorialhr/: app.json  functions.json
apps/figma/: app.json  functions.json
apps/fireflies/: app.json
apps/github/: app.json  functions.json
apps/gmail/: app.json  functions.json
apps/google_analytics/: app.json  functions.json
apps/google_calendar/: app.json  functions.json
apps/google_docs/: app.json  functions.json
apps/google_maps/: functions.json
apps/google_sheets/: app.json  functions.json
apps/google_tasks/: app.json  functions.json
apps/holded/: app.json
apps/hubspot/: app.json
apps/mem0/: app.json  functions.json
apps/neon/: app.json  functions.json
apps/notion/: app.json  functions.json
apps/notte/: app.json
apps/one_signal/: app.json
apps/onepagecrm/: functions.json
apps/paddle/: functions.json
apps/posthog/: app.json  functions.json
apps/reddit/: app.json  functions.json
apps/resend/: app.json  functions.json
apps/rossum/: app.json
apps/scrapybara/: app.json
apps/sendgrid/: app.json  functions.json
apps/serpapi/: app.json  functions.json
apps/slack/: app.json  functions.json
apps/solscan/: app.json  functions.json
apps/steel/: app.json  functions.json
apps/supabase/: app.json  functions.json
apps/tavily/: app.json  functions.json
apps/tines/: app.json  functions.json
apps/weathermap/: app.json
apps/wrike/: app.json
apps/zenrows/: app.json
apps/zoho_desk/: app.json  functions.json
backend/: .env.example  .env.shared  .gitignore  Dockerfile  Dockerfile.runner  Dockerfile.server  README.md  alembic.ini  compose.ci.yml  compose.test.yml  compose.yml  pyproject.toml  requirements.txt  test_api_key_credentials.py  test_models_manual.py
backend/app/: dependencies.py
backend/evals/: evaluation_pipeline.py  intent_prompts.py  search_evaluator.py  (+1 more)
cli/: README.md  aipocli.py
database/: models.py
deployment/: app.py
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: seed_db.sh
server/: config.py  crud.py  db.py  dependencies.py  main.py  openai_service.py  schemas.py
(+652 files in other folders)
