[tool.poetry]
name = "aipolabs-app"
version = "0.0.1"
description = "aipolabs app"
authors = ["Aipolabs <team@aipolabs.xyz>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
pgvector = "^0.3.4"
Authlib = "^1.3.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
httpx = "^0.27.2"
itsdangerous = "^2.2.0"
openai = "^1.51.2"
click = "^8.1.7"
openapi-spec-validator = "^0.7.1"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.11.2"
alembic = "^1.13.3"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s %(levelname)s %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


# [tool.mypy]
# strict = true
# exclude = ["venv", ".venv", "alembic"]
